--- a/delicious-sweet/package.json
+++ b/delicious-sweet/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "next": "15.2.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.6"
   }
 }
