--- a/delicious-sweet/package.json
+++ b/delicious-sweet/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "15.2.3",
+    "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
